update API endpoints
